kube/app/deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  namespace: default
spec:
  serviceAccountName: secret-ksa
  containers:
    - image: gcr.io/google.com/cloudsdktool/cloud-sdk:slim
      name: mypod
      resources:
        requests:
          cpu: 100m
      tty: true
      volumeMounts:
        - mountPath: /var/secrets
          name: secret-volume
  volumes:
    - name: entrypoint
      configMap:
        name: entrypoint
        defaultMode: 0744
    - name: secret-volume
      emptyDir: {}
