kube/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gnh-app
  annotations:
    kubernetes.io/ingress.global-static-ip-name:
    networking.gke.io/managed-certificates: cert-gnh-app
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: gnh-app
      port:
        number: http
